# linuxnosikumi

./: 1.data  2.data  README  buff-cache.sh  cow.py  cpuperf.sh  intignore.py  memuse.py  mmap  pause  segv  shared-mem.py  wait-ret.sh
src/: 0.data  capture.sh  cpuperf.data  demand-paging.py  filemap  filemap.go  fork-and-exec.py  fork.py  hello  inc-wrong-lock.sh  mmap.go  multiload.sh  non-shared-mem.py  plot_sched.py  pyproject.toml  sched.py
