[project]
name = "linux-shikumi"
version = "0.1.0"
description = ""
authors = [
    {name = "shimarda",email = "ryo1031shima@outlook.jp"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
